--- a/src/output.css
+++ b/src/output.css
@@ -25,6 +25,16 @@
   --tw-content: '';
 }
 
+
+.container {
+  transition: transform 1s;
+}
+
+body {
+  overflow: hidden;
+}
+
+
 /*
 1. Use a consistent sensible line-height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
